@@ -1,6 +1,11 @@
 IBCS APP — OPERATIONS CHANGE LOG
 ================================
 
+2025-11-03  Deployment safeguards
+---------------------------------
+- `deploy-everything.sh` now aborts when not on `main` and fetches `origin/main` to prevent non-fast-forward pushes.
+- `seed-teacher.js` auto-fills first/last names (or prompts for them) to satisfy required InstantDB attributes during seeding.
+
 2025-11-03  Docs consolidation
 --------------------------------
 - Centralised operational guides under `docs/` with new index, setup, architecture, content-authoring, deployment, and AI agent playbooks.
